# LogC4

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  cmaketest.txt  run.sh
man/: logc4_fileClose.3.man  logc4_fileLog.3.man  logc4_fileOpen.3.man  logc4_file_t.7.man  logc4_msg_t.7.man  logc4_stdLog.3.man
misc/: timezones.json
scripts/: install.sh  remove.sh  test.sh
src/: logc4.c  logc4.h  test.c  timezones.h
test_files/results/given/: test_init.txt  test_print.txt
test_files/tests/: test_init.txt  test_print.txt  test_stdout.txt
